# stdex

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
config/: config.cmake
include/stdex/: array_ex.h  array_ext.h  deque_ex.h  deque_ext.h  forward_list_ex.h  forward_list_ext.h  functional_ex.h  functional_ext.h  list_ex.h  list_ext.h  map_ex.h  map_ext.h  pair_ex.h  pair_ext.h  queue_ex.h  queue_ext.h  set_ex.h  set_ext.h  stack_ex.h  stack_ext.h  std_type_sets.h  string_ex.h  string_ext.h  traits_ex.h  traits_ext.h  tuple_ex.h  tuple_ext.h  unordered_map_ex.h  unordered_map_ext.h  unordered_set_ex.h  unordered_set_ext.h  vector_ex.h  vector_ext.h
src/: functional_ext.cpp  string_ext.cpp
test/: CMakeLists.txt
test/src/: test_stdext_traits.cpp
